--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "oscript",
             "request": "launch",
             "program": "${file}",
-            "args": [],
+            "args": ["build"],
             "cwd": "${workspaceRoot}",
             "runtimeExecutable": null,
             "debugPort": 2801,
